--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -20,17 +20,17 @@
                 {
                     "title": "Business",
                     "subtitle": "For a connected company.",
-                    "description": "The team and their customers - to ensure that everyone is connected anywhere and anytime, there are secure and innovative network solutions from AirZen."
+                    "description": "The team and their custo- mers - to ensure that everyone is connected anywhere and anytime, there are secure and innovative network solutions from AirZen."
                 },
                 {
                     "title": "Education",
                     "subtitle": "For a digital future.",
-                    "description": "Digital change, homeschooling, administration - for everything to work, you need a complex WLAN that is very easy to use."
+                    "description": "Digital change, home- schooling, administration\n - for everything to work, you need a complex WLAN that is very easy to use."
                 },
                 {
                     "title": "Industrial",
                     "subtitle": "For digital progress.",
-                    "description": "Innovative ideas need individual solutions - even on a large scale. AirZen helps solve industrial network tasks."
+                    "description": "Innovative ideas need individual solutions\n - even on a large scale. AirZen helps solve industrial network tasks."
                 }
             ],
             "solution": "Our Solution"
