append privacy link in contact section

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -86,7 +86,8 @@
             "title": "Kontakt",
             "subtitle": "Highend-Netzwerk-Technologien für einen entspannteren Alltag und Arbeitswelt. Und das außer- gewöhnlich einfach, sicher und zuverlässig.",
             "send": "senden",
-            "description": "Ich habe die Datenschutz- erklärung gelesen und stimme der Speicherung und Verarbeitung meiner Daten durch die AirZen Networks Lda zu. \n Ich willige ein, dass meine Daten zur Beantwortung meiner Anfrage elekronisch erhoben und gespeichert werden. Ich kann meine Einwilligung jederzeit widerrufen: privacy@airzen.io "
+            "description": "Ich habe die \nDatenschutz- erklärung\n gelesen und stimme der Speicherung und Verarbeitung meiner Daten durch die AirZen Networks Lda zu. \n Ich willige ein, dass meine Daten zur Beantwortung meiner Anfrage elekronisch erhoben und gespeichert werden. Ich kann meine Einwilligung jederzeit widerrufen: privacy@airzen.io ",
+            "href": "https://www.plume.com/de-DE/legal/"
         },
         "menu": "Lösungen \n Über uns \n Referezen \n Kontakt"
     },
