--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -15,22 +15,22 @@
                 {
                     "title": "Home",
                     "subtitle": "Für ein smartes Zuhause.",
-                    "description": "Ein vernetztes Zuhause mit sicherem, lückenlosem und selbstoptimierendem WLAN. Ideal für das Home -Office und die ganze Familie."
+                    "description": "Ein vernetztes Zuhause mit sicherem, lückenlosem und selbstoptimierendem WLAN. Ideal für das HomeOffice und die ganze Familie."
                 },
                 {
                     "title": "Business",
                     "subtitle": "Für ein vernetztes Unternehmen.",
-                    "description": "Das Team und ihre Kunden Damit jeder überall und jederzeit vernetzt ist, gibt es die sicheren und innov- ativen Netzwerklösungen von AirZen."
+                    "description": "Das Team und ihre Kunden, damit jeder überall und jederzeit vernetzt ist, gibt es die sicheren und innovativen Netzwerklösungen von AirZen."
                 },
                 {
                     "title": "Education",
                     "subtitle": "Für eine digitale Zukunft.",
-                    "description": "Digitaler Wandel, Home- schooling, Verwaltung \n Damit alles funktioniert braucht es ein komplexes WLAN mit kinderleichter Handhabe."
+                    "description": "Digitaler Wandel, Homeschooling, Verwaltung Damit alles funktioniert braucht es ein komplexes WLAN mit kinderleichter Handhabe."
                 },
                 {
-                    "title": "Industril",
+                    "title": "Industrial",
                     "subtitle": "Für den digitalen Fortschritt.",
-                    "description": "Innovative Ideen brauchen individuelle Lösungen, au- ch im großen Stil. AirZen hilft bei der Lösung indus- trieller Netzwerk-Aufgaben."
+                    "description": "Innovative Ideen brauchen individuelle Lösungen, auch im großen Stil. AirZen hilft bei der Lösung industrieller Netzwerk-Aufgaben."
                 }
             ],
             "solution": "Unsere Lösung"
